LPS-77699 Update Translations

--- a/modules/apps/archived/chat-service/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/archived/chat-service/src/main/resources/content/Language_gl.properties
@@ -3,7 +3,7 @@ buddy-list-max-buddies=Buddy List Maximum Buddies
 buddy-list-site-excludes=Buddy List Site Excludes
 buddy-list-strategy=Buddy List Strategy
 chat-service-configuration-name=Conversa
-jabber-enabled=Jabber Enabled
+jabber-enabled=Jabber habilitado
 jabber-host=Host de Jabber
 jabber-import-user-enabled=Jabber Import User Enabled
 jabber-port=Porto de Jabber
