--- a/modules/apps/bookmarks/bookmarks-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/bookmarks/bookmarks-web/src/main/resources/content/Language_gl.properties
@@ -24,7 +24,7 @@ search-bookmarks=Buscar en favoritos
 there-are-no-bookmarks-in-this-folder=Non hai enlaces nesta carpeta.
 view-bookmarks=Ver enlaces
 x-bookmark=Engadir enlace
-x-bookmarks={0} Bookmarks
+x-bookmarks={0} marcadores
 x-entries-are-ready-to-be-moved={0} entries are ready to be moved.
 x-folder={0} cartafol
 x-visit={0} visita
