--- a/modules/apps/captcha/captcha-api/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/captcha/captcha-api/src/main/resources/content/Language_gl.properties
@@ -1,4 +1,4 @@
-captcha-engine=CAPTCHA Engine
+captcha-engine=Motor CAPTCHA
 captcha-engine-help=Set the engine used to generate captchas. reCAPTCHA uses an external service that must be configured independently but provides an audible alternative which makes the captcha accessible to the visually impaired. See https://www.google.com/recaptcha/admin/create for details.
 create-account-captcha-enabled=Create Account CAPTCHA Enabled
 max-challenges=Maximum Challenges
