--- a/modules/apps/frontend-editor/frontend-editor-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/frontend-editor/frontend-editor-lang/src/main/resources/content/Language_gl.properties
@@ -1,7 +1,7 @@
-alert-message=Alert Message
+alert-message=Mensaxe de alerta
 cited-work=Obra citada
 code-view=Vista de código
-computer-code=Computer Code
+computer-code=Código do computador
 fullscreen=Pantalla completa
 heading-x=Cabeceira {0}
 info-message=Mensaxe de información
