--- a/modules/apps/frontend-js/frontend-js-loader-modules-extender/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/frontend-js/frontend-js-loader-modules-extender/src/main/resources/content/Language_gl.properties
@@ -1,6 +1,6 @@
 apply-versioning=Apply Versioning
 details-configuration-name=JavaScript Loader
 explain-resolutions=Explain Module Resolutions
-expose-global=Expose Global
+expose-global=Expor Global
 log-level=Nivel de rexistro
 wait-timeout=Module Definition Timeout (seconds)
