--- a/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/content/Language_gl.properties
@@ -30,7 +30,7 @@ article-window-state=Estado da ventá do artigo
 articles-with-tag-x=Artigos ca etiqueta {0}.
 articles-with-x-x=Artigos con {0} {1}.
 articles-with-x-x-and-tag-x=Artigos con {0} {1} e etiqueta {2}.
-basic-article=Basic Article
+basic-article=Artigo básico
 child-articles-display-style=Estilo de vista do artigos fillo
 child-articles-for-x=Artigos fillo de {0}.
 child-articles-x=Child Articles ({0})
@@ -84,7 +84,7 @@ no-articles-were-found=Non se atoparon artigos.
 no-articles-were-found-that-matched-the-keywords-x=Non foron encontrados artigos que coincidan coas palabras chave: {0}.
 no-comments-found=No comments found.
 nothing-was-imported-no-articles-were-found-with-one-of-the-supported-extensions-x=Nothing was imported. No articles were found with one of the supported extensions: {0}.
-num-of-kb-articles=# of Articles
+num-of-kb-articles=Número de artigos
 num-of-kb-folders=Número de cartafoles
 parent-article=Artigo pai
 please-configure-the-list-of-available-sections-in-system-settings-collaboration-knowledge-base-to-enable-this-widget=Please configure the list of available sections in System Settings > Collaboration > Knowledge Base to enable this widget.
@@ -102,7 +102,7 @@ search-articles=Buscar artigos
 search-for-a-similar-article=Search for a similar article.
 select-article=Select Article
 select-entry=Seleccionar entrada
-select-parent=Select Parent
+select-parent=Seleccionar pai
 show-asset-entries=Mostrar elementos
 show-attachments=Show Attachments
 show-author-column=Mostrar columna do autor
