--- a/modules/apps/layout/layout-admin-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/layout/layout-admin-web/src/main/resources/content/Language_gl.properties
@@ -25,7 +25,7 @@ click-reset-and-propagate-to-reset-the-failure-count-and-propagate-changes-from-
 collections-are-needed-to-create-page-templates=Collections are needed to create page templates.
 color-scheme=Gamas de cor
 configure-page=Configure Page
-configure-x=Configure {0}
+configure-x=Configurar {0}
 content-page-template=Content Page Template
 content-type=Content Type
 convert-to-content-page=Convert to Content Page
@@ -58,7 +58,7 @@ javax.portlet.description.com_liferay_layout_admin_web_portlet_GroupPagesPortlet
 javax.portlet.title.com_liferay_layout_admin_web_portlet_GroupPagesPortlet=Páxinas do sitio
 javax.portlet.title.com_liferay_layout_admin_web_portlet_LayoutAdminPortlet=Configuración de páxinas
 javax.portlet.title.com_liferay_layout_admin_web_portlet_LayoutPrototypePagePortlet=Page Template Page
-javax.portlet.title.com_liferay_layout_admin_web_portlet_ViewLayoutsPortlet=View Layouts
+javax.portlet.title.com_liferay_layout_admin_web_portlet_ViewLayoutsPortlet=Vista de páxinas
 javax.portlet.title.com_liferay_layout_prototype_web_portlet_LayoutPrototypePortlet=Page Templates
 layout-admin-web-configuration-name=Pages Administration
 layout-inherits-from-a-prototype-widgets-cannot-be-manipulated=Layout inherits from a prototype. Widgets cannot be manipulated.
@@ -103,7 +103,7 @@ publication-process-in-progress-help=There is a publication process in progress.
 query-string=Consulta
 query-string-help=Opcionalmente usa esta consulta cando non exista outra. Esto compórtase como os parámetros por defecto para a páxina.
 reactivating-inherited-changes-may-update-the-page-with-the-possible-changes-that-could-have-been-made-in-the-original-template=Reactivating inherited changes may update the page with the possible changes that could have been made in the original template. Are you sure you want to continue?
-relative-path=Relative Path
+relative-path=Camiño relativo
 rename-display-page-template=Rename Display Page Template
 rename-layout-page-template=Rename Layout Page Template
 requires-log-in=Requires Log In
@@ -115,7 +115,7 @@ robots-txt-help=You can use [$HOST$], [$PORT$], and [$PROTOCOL$] placeholders as
 select-template=Select Template
 send-sitemap-information-to-preview=Enviar información do mapa do sitio a {0}Previsualizar{1}:
 set-the-robots-txt=Set the <em>robots.txt</em> for pages.
-show-actions=Show Actions
+show-actions=Mostrar accións
 show-pages=Mostrar páxinas
 show-site-name=Show Site Name
 some-page-settings-are-unavailable-because-x-is-enabled=Some page settings are unavailable because <em>{0}</em> is enabled. To change these settings, disable <em>{0}</em> under the <em>{1}</em> section.
