--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_gl.properties
@@ -21,7 +21,7 @@ content-name=Content Name
 content-page-editor-configuration-name=Content Page Editor
 content-source-selected-for-this-display-page-template=Content source selected for this Display Page Template.
 content-structure=Content Structure
-content-type=Content Type
+content-type=Tipo de contido
 content-value=Content Value
 contents=Contidos
 create-new-content=Create New Content
@@ -124,6 +124,6 @@ used-in-1-page=Used in 1 Page
 used-in-x-pages=Used in {0} Pages
 view-usages=Ver usos
 widgets=Widgets
-x-default={0} (Default)
+x-default={0} (predeterminado)
 x-fields={0} campos
 you-do-not-have-any-sections=You do not have any sections.
