--- a/modules/apps/marketplace/marketplace-app-manager-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/marketplace/marketplace-app-manager-web/src/main/resources/content/Language_gl.properties
@@ -1,5 +1,5 @@
 all-apps=Todas as aplicacións
-all-statuses=All Statuses
+all-statuses=Todos os estados
 app-manager=Xestor de aplicacións
 apps=Aplicacións
 are-you-sure-you-want-to-uninstall-this=¿Estás seguro de que queres desinstalar este producto?
@@ -15,7 +15,7 @@ no-components-were-found=No components were found.
 no-modules-were-found=No modules were found.
 no-portlets-were-found=No portlets were found.
 please-upload-a-file-with-a-valid-extension-jar-lpkg-or-war=Please upload a file with a valid extension (JAR, LPKG, or WAR File).
-productivity=Productivity
+productivity=Produtividade
 reindex-search=Reindex Search
 suite=Conxunto de aplicacións
 there-are-no-configurable-plugins-for-this-app=There are no configurable plugins for this app.
