--- a/modules/apps/mobile-device-rules/mobile-device-rules-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/mobile-device-rules/mobile-device-rules-web/src/main/resources/content/Language_gl.properties
@@ -40,7 +40,7 @@ no-available-sites=No available sites.
 no-classification-rules-are-configured-for-this-device-family=No classification rules are configured for this device family.
 no-device-rules-are-configured=No device rules are configured.
 operating-system-and-type=Operating System and Type
-other-devices=Other Devices
+other-devices=Outros dispositivos
 physical-screen-size=Physical Screen Size
 please-select-a-rule-type=Por favor, selecciona un tipo válido.
 please-select-a-valid-action-type=Por favor, selecciona un tipo válido.
