--- a/modules/apps/notifications/notifications-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/notifications/notifications-web/src/main/resources/content/Language_gl.properties
@@ -1,5 +1,5 @@
 all-notifications-were-marked-as-read-successfully=All notifications were marked as read successfully.
-javax.portlet.title.com_liferay_notifications_web_portlet_NotificationsPortlet=Notifications
+javax.portlet.title.com_liferay_notifications_web_portlet_NotificationsPortlet=Notificacións
 mark-all-notifications-as-read=Mark All Notifications as Read
 notification-was-deleted-successfully=Notification was deleted successfully.
 notification-was-marked-as-read-successfully=Notification was marked as read successfully.
