--- a/modules/apps/oauth2-provider/oauth2-provider-api/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/oauth2-provider/oauth2-provider-api/src/main/resources/content/Language_gl.properties
@@ -1,11 +1,11 @@
 AUTHORIZATION_CODE=Authorization Code
 AUTHORIZATION_CODE_PKCE=PKCE Extended Authorization Code
 CLIENT_CREDENTIALS=Client Credentials
-REFRESH_TOKEN=Refresh Token
+REFRESH_TOKEN=Token de actualización
 RESOURCE_OWNER_PASSWORD=Resource Owner Password Credentials
 action.ADD_APPLICATION=Add OAuth 2 Application
-action.CREATE_TOKEN=Create Token
-action.REVOKE_TOKEN=Revoke Token
+action.CREATE_TOKEN=Crear token
+action.REVOKE_TOKEN=Revogar token
 oauth2-allow-authorization-code-grant=Allow Authorization Code
 oauth2-allow-authorization-code-grant-description=When unselected, remote clients cannot request new tokens, applies immediately to existing and new clients.
 oauth2-allow-authorization-code-pkce-grant=Allow PKCE Extended Authorization Code
