--- a/modules/apps/oauth2-provider/oauth2-provider-scope-impl/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/oauth2-provider/oauth2-provider-scope-impl/src/main/resources/content/Language_gl.properties
@@ -8,7 +8,7 @@ mapping=Scopes Mapping
 mapping-description=Mapee a chave utilizando a sintaxe "chave=valor". Para agrupar múltiples chaves e valores xuntas, utilice "chave1,chave2,chave3=valor1,valor2,valor3".
 oauth2-bundle-prefix-handler-factory-configuration-name=Bundle PrefixHandlerFactory
 oauth2-configurable-scopemapper-configuration-name=ScopeMapper
-oauth2-scope-locator-configuration-name=Scope Locator
+oauth2-scope-locator-configuration-name=Localizador de ámbitos
 oauth2.scope.DELETE=create/update/delete data on your behalf
 oauth2.scope.GET=read data on your behalf
 oauth2.scope.HEAD=read data on your behalf
