--- a/modules/apps/organizations/organizations-service/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/organizations/organizations-service/src/main/resources/content/Language_gl.properties
@@ -1,5 +1,5 @@
 an-organization-type-must-have-a-valid-name=An organization type must have a valid name.
-children-types=Children Types
+children-types=Tipos de fillos
 country-enabled=Country Enabled
 country-required=Country Required
 organization-type-configuration-name=Organization Type
