--- a/modules/apps/portal-search/portal-search-admin-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-search/portal-search-admin-web/src/main/resources/content/Language_gl.properties
@@ -5,7 +5,7 @@ copied=Copiado
 field-mappings=Field Mappings
 health-x=Saúde: {0}
 index=ÍNDICE
-index-actions=Index Actions
+index-actions=Accións de indexación
 index-id-goes-here=Index ID goes here.
 index-identity=Index Identity
 index-names-goes-here=Index Name goes here.
@@ -16,7 +16,7 @@ no-search-engine-detected-help=No search engine detected. To determine why, plea
 nodes-x=Nós ({0})
 reindex-all-search-indexes=Volver a xerar todos os índices das procuras.
 reindex-all-spell-check-indexes=Volver a xerar todos os índices das procuras.
-reindex-x=Reindex {0}.
+reindex-x=Reindexar {0}.
 search-engine-vendor=Search Engine Vendor
 the-index-name=The Index Name
 write=Escribir
