--- a/modules/apps/portal-search/portal-search-api/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-search/portal-search-api/src/main/resources/content/Language_gl.properties
@@ -30,7 +30,7 @@ permission-terms-limit-help=Set this to limit the number of permission search te
 query-pre-process-configuration-name=Index Query Preprocessor
 reindex-configuration-name=Reindexación
 reindexer-configuration-name=Reindexador
-search-engine-helper-configuration-name=Engine Helper
+search-engine-helper-configuration-name=Asistente do motor
 search-permission-checker-configuration-name=Permission Checker
 search-query-result-window-limit=Search Query Result Window Limit
 search-query-result-window-limit-help=Set this to limit the number of search results that can be requested from a search query.
