--- a/modules/apps/portal-security-sso/portal-security-sso-openid-connect-impl/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-security-sso/portal-security-sso-openid-connect-impl/src/main/resources/content/Language_gl.properties
@@ -15,10 +15,10 @@ open-id-connect-client-id-help=Set the client ID for the OpenID Connect provider
 open-id-connect-client-secret=OpenID connect client secret
 open-id-connect-client-secret-help=Set the client secret for the OpenID Connect provider.
 open-id-connect-provider-configuration-name=OpenID Connect Provider
-provider-name=Provider Name
+provider-name=Nome do provedor
 provider-name-help=Set the name for the OpenID Connect provider.
 scopes-help=Set the scopes Liferay will request during authentication. Scopes are delimited with spaces.
-subject-types=Subject Types
+subject-types=Tipos de asunto
 subject-types-help=Set the subject types for the OpenID Connect provider.
 token-endpoint=Token Endpoint
 token-endpoint-help=Set the token endpoint for the OpenID Connect provider.
