--- a/modules/apps/portal-security/portal-security-service-access-policy-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-security/portal-security-service-access-policy-web/src/main/resources/content/Language_gl.properties
@@ -11,7 +11,7 @@ please-enter-a-unique-service-access-policy-name=Please enter a unique service a
 policies=Políticas
 service-access-policy-name-is-required=Service access policy name is required.
 service-access-policy-title-is-required=Service access policy title is required.
-service-class=Service Class
+service-class=Clase de servizo
 switch-to-advanced-mode=Switch to Advanced Mode
 switch-to-friendly-mode=Switch to Friendly Mode
 there-are-no-service-access-policies=There are no service access policies.
