--- a/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-settings/portal-settings-lang/src/main/resources/content/Language_gl.properties
@@ -47,7 +47,7 @@ disabled-by-default=Disabled by Default
 domain-controller-name-help=Especifica o nome do controlador de dominio NetBIOS.
 edit-ldap-server=Engadir servidor LDAP
 email-address-attribute=Atributo correo electrónico
-email-sender=Email Sender
+email-sender=Remitente de correo electrónico
 email-with-password=Email with Password
 email-without-password=Email without Password
 enable-birthday=Permitir data de nacemento
