--- a/modules/apps/portal-workflow/portal-workflow-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-workflow/portal-workflow-lang/src/main/resources/content/Language_gl.properties
@@ -9,7 +9,7 @@ assigned-initial-task=Assigned initial task.
 configure-assignments=Configure Assignments
 configure-submissions=Configure Submissions
 copy-does-not-include-revisions=This copy does not include the revision history.
-default-x=Default: {0}
+default-x=Predeterminado: {0}
 definition-imported-sucessfully=Definition imported successfully.
 delete-workflow-question=Delete workflow?
 duplicate-workflow=Duplicate Workflow
@@ -29,7 +29,7 @@ mmm-d-yyyy-hh-mm=MMM d, yyyy, HH:mm
 mmm-d-yyyy-hh-mm-a=MMM d, yyyy, hh:mm a
 my-submissions=My Submissions
 my-workflow-tasks=My Workflow Tasks
-new-workflow=New Workflow
+new-workflow=Novo fluxo de traballo
 no-workflow-definitions-are-defined=Non foron definidos procesos de traballo.
 not-published=Not Published
 please-add-a-workflow-title-before-publishing=Please add a workflow title before publishing.
