--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_gl.properties
@@ -24,13 +24,13 @@ no-personalized-variations-were-found=No personalized variations were found. Ple
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported.
 ordering=Ordenación
 other-site=Outro estado
-page-templates-x=Page Templates ({0})
+page-templates-x=Modelos de páxina ({0})
 pages-x=Páxinas ({0})
 personalized-variation=Personalized Variation
 personalized-variations=Personalized Variations
 rename-content-set=Renomear conxunto de contidos
-the-field-value-is-invalid=The field value is invalid.
-there-are-no-asset-entries=There are no asset entries.
+the-field-value-is-invalid=O valor do campo é inválido.
+there-are-no-asset-entries=Non hai entradas de recursos.
 there-are-no-content-set-usages=There are no content set usages.
 there-are-no-content-sets=Non hai ningún conxunto de contidos.
 view-content=Ver contido
