--- a/modules/apps/asset/asset-publisher-layout-prototype/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/asset/asset-publisher-layout-prototype/src/main/resources/content/Language_gl.properties
@@ -1,2 +1,2 @@
-layout-prototype-web-content-description=Create, edit, and explore web content from this page. Search available content, explore related content with tags, and browse content categories.
+layout-prototype-web-content-description=Cree, edite e explore contido web a partir desta páxina. Procure contido dispoñíbel, explore o contido relacionado con etiquetas e navegue as categorías de contido.
 layout-prototype-web-content-title=Content Display Page
