--- a/modules/apps/asset/asset-tags-admin-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/asset/asset-tags-admin-web/src/main/resources/content/Language_gl.properties
@@ -1,7 +1,7 @@
 a-tag-with-that-name-already-exists=A tag with that name already exists.
 add-tag=Engadir etiqueta
 are-you-sure-you-want-to-merge-x-into-x=¿Estás seguro de que queres fusionar "{0}" con "{1}"? Esta operación cambiará todos os contidos coa etiqueta "{0}" substituíndoa pola etiqueta "{1}".
-into-this-tag=Into This Tag:
+into-this-tag=Dentro desta etiqueta:
 javax.portlet.description.com_liferay_asset_tags_admin_web_portlet_AssetTagsAdminPortlet=Tags enable categorization of content through flexible groups of terms and preset vocabularies. Administrators may manage all tags, assign permissions, and set advanced options. Users can manage their tags, and define tag sets and categories to use when categorizing content.
 javax.portlet.long-title.com_liferay_asset_tags_admin_web_portlet_AssetTagsAdminPortlet=Administración de etiquetas
 javax.portlet.title.com_liferay_asset_tags_admin_web_portlet_AssetTagsAdminPortlet=Administración de etiquetas
