--- a/modules/apps/blogs/blogs-api/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/blogs/blogs-api/src/main/resources/content/Language_gl.properties
@@ -2,7 +2,7 @@ blogs-allowed-image-file-extensions=Allowed Blogs Image File Extensions
 blogs-allowed-image-file-extensions-description=Set valid file extensions for blog images. A file extension of * will permit all file extensions.
 blogs-configuration-name=Blogs
 blogs-file-uploads-configuration-name=File Uploads
-blogs-group-service-configuration-name=Blogs Service
+blogs-group-service-configuration-name=Servizo de Blogs
 blogs-image-maximum-file-size=Maximum Blogs Image Size
 blogs-image-maximum-file-size-description=Estabeleza o tamaño máximo para imaxes almacenadas con entradas de blog. As imaxes poden ser cargadas a través dun editor Alloy, unha imaxe de portada ou un selector de imaxe. Un valor de 0 para o tamaño máximo do ficheiro pode ser utilizado para indicar um tamaño ilimitado de ficheiro. Non obstante, o tamaño máximo de ficheiro permitido é definido na propiedade "com.liferay.portal.upload.UploadServletRequestImpl.max.size". O valor predeterminado é 5 MB.
 entry-check-interval=Entry Check Interval
