--- a/modules/apps/bookmarks/bookmarks-api/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/bookmarks/bookmarks-api/src/main/resources/content/Language_gl.properties
@@ -4,6 +4,6 @@ email-entry-added-subject=Email Entry Added Subject
 email-entry-updated-body=Email Entry Updated Body
 email-entry-updated-enabled=Email Entry Updated Enabled
 email-entry-updated-subject=Email Entry Updated Subject
-entry-columns=Entry Columns
-folder-columns=Folder Columns
+entry-columns=Columnas de entrada
+folder-columns=Columnas do cartafol
 show-folders-search=Show Folders Search
