--- a/modules/apps/document-library/document-library-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/document-library/document-library-web/src/main/resources/content/Language_gl.properties
@@ -46,7 +46,7 @@ document-type-restrictions=Restricións de tipos de documentos
 document-type-restrictions-and-workflow=Document Type Restrictions and Workflow
 document-type-restrictions-help=Os cartafoles poden ser restrinxidos para permitir soamente certos tipos de documento. As restricións poden ser herdadas dun cartafol pai ou outro devanceiro. Alternativamente, as restricións poden ser modificadas no cartafol actual.
 document-types=Tipos de documentos
-document-util=Document Util
+document-util=Utilidade de documentos
 documents-listing=Listado de documentos
 download-file=Descargar arquivo
 download-url=URL de descarga
@@ -74,11 +74,11 @@ keep-current-version-number=Keep Current Version Number
 last-updated-by-x=Última actualización por {0}
 latest-version-url=Latest Version URL
 main-metadata-fields=Metadatos dos campos
-major-version=Major Version
+major-version=Versión maior
 maximum-entries-to-display=Número máximo de elementos
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats:
 metadata-sets=Metadatos dos conxuntos
-minor-version=Minor Version
+minor-version=Versión menor
 move-files=Mover arquivos
 multiple-documents=Múltiples documentos
 multiple-files-upload=Multiple Files Upload
@@ -87,7 +87,7 @@ new-document=Novo documento
 new-document-type=Novo tipo de documento
 new-file-shortcut=Novo enlace a arquivo
 new-repository=Engadir repositorio
-no-change-log=No Change Log
+no-change-log=Sen rexistro de modificacións
 no-documents-were-found-that-matched-the-keywords-x=Non se atopou ningún documento coas palabras clave: {0}.
 no-preview-available=No preview available
 num-of-documents=# de documentos
@@ -97,7 +97,7 @@ please-enter-a-unique-repository-name=Por favor, introduce un nome de campo úni
 please-select-a-document-type=Por favor, selecciona un tipo válido.
 please-select-the-file-again=Please select the file again.
 please-verify-your-repository-configuration-parameters=Por favor verifica os parámetros de configuración do teu repositorio.
-preview-image=Preview Image
+preview-image=Previsualizar imaxe
 processing-actions=Processing actions...
 receive-a-notification-when-someone-adds-a-new-document-in-a-folder-you-are-subscribed-to=Engade un novo documento nun cartafol ao que está suscrito.
 receive-a-notification-when-someone-updates-a-document-in-a-folder-you-are-subscribed-to=Atualiza un documento nun cartafol ao que está suscrito.
@@ -127,7 +127,7 @@ show-folder-menu=Mostrar carpeta de menú
 show-media-type=Show Media Type
 show-navigation-links=Mostrar enlaces de navegación
 slide-show=Presentación
-target-folder=Target Folder
+target-folder=Cartafol de destino
 target-site=Sitio de destino
 the-document-type-you-selected-is-not-valid-for-this-folder=The document type you selected is not valid for this folder.
 the-folder-name-cannot-end-with-the-following-characters-x=The folder name cannot end with the following characters: {0}.
@@ -145,7 +145,7 @@ uploaded-by-x=Uploaded by {0}, {1}
 uploaded-by-x-x=Subido por <a href="{0}">{1}</a>, {2}
 use-document-type-restrictions-and-workflow-of-the-parent-folder-x=Use structure restrictions of the parent folder ({0}).
 use-document-type-restrictions-of-the-parent-folder-x=Use structure restrictions of the parent folder ({0}).
-version-notes=Version Notes
+version-notes=Notas da versión
 version-x-url=Version {0} URL
 versioning=Versións
 view-original-file=Ver arquivo orixinal
