--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_gl.properties
@@ -1,4 +1,4 @@
-a-single-line=A Single Line
+a-single-line=Unha soa liña
 access-local-network-description=Set if data providers have access to the local network.
 access-local-network-name=Access Local Network
 action.ADD_DATA_PROVIDER_INSTANCE=Add Data Provider Instance
@@ -95,7 +95,7 @@ define-condition-and-action-to-change-fields-and-elements-on-the-form=Define con
 delete-action=Delete action?
 delete-condition=Delete condition?
 delete-current-page=Delete Current Page
-delete-field-dialog-title=Delete field?
+delete-field-dialog-title=Eliminar campo?
 delete-row=Eliminar fila?
 dismiss-operation=Descartar operación
 displayed-json-attribute=Displayed JSON Attribute
@@ -150,9 +150,9 @@ field-validation-failed=A custom field validation failed.
 field-visibility-expression=Field Visibility Expression
 filter-parameter-name=Filter Parameter Name
 form-entries=Entradas de formulario
-form-settings=Form Settings
+form-settings=Configuracións do formulario
 forms=Formularios
-from-autofill=From Autofill
+from-autofill=A partir de enchemento automático
 from-data-provider=From Data Provider
 ftl[stands-for]=FreeMarker
 google-talk=Google Talk
@@ -201,7 +201,7 @@ meeting-minutes=Meeting Minutes (Automatic Copy)
 minor=Pequeno
 model.resource.com.liferay.dynamic.data.mapping=Dynamic Data Mapping
 model.resource.com.liferay.dynamic.data.mapping.model.DDMDataProviderInstance=Dynamic Data Mapping Data Provider Instance
-model.resource.com.liferay.dynamic.data.mapping.model.DDMFormInstance=Form Instance
+model.resource.com.liferay.dynamic.data.mapping.model.DDMFormInstance=Instancia de formulario
 model.resource.com.liferay.dynamic.data.mapping.model.DDMFormInstance-com.liferay.dynamic.data.mapping.model.DDMStructure=Form Instance Structure
 model.resource.com.liferay.dynamic.data.mapping.model.DDMFormInstanceRecord=Rexistro de formulario
 model.resource.com.liferay.dynamic.data.mapping.model.DDMStructure=Dynamic Data Mapping Structure
@@ -214,7 +214,7 @@ new-form=Novo formulario
 new-structure=Nova estrutura
 new-template-for-structure-x=Novo modelo para a estrutura: {0}
 new-x-form-submitted=New {0} Form Submitted
-no-continue=No, continue.
+no-continue=Non, continuar.
 no-data-providers-were-found=No data providers were found.
 no-element-sets-were-found=No element sets were found.
 no-forms-were-found=No forms were found.
@@ -356,8 +356,8 @@ unknown-error=Unkown error.
 unlabeled=Sen etiqueta
 unpublish-form=Unpublish Form
 untitled-element-set=Untitled Element Set
-untitled-form=Untitled Form
-untitled-page=Untitled Page
+untitled-form=Formulario sen título
+untitled-page=Páxina sen título
 untitled-page-x-of-x=Untitled Page ({0} of {1})
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 url-must-not-be-a-local-network=URL must not be a local network.
@@ -369,7 +369,7 @@ vm[stands-for]=Velocity
 write-a-conditional-expression-to-control-whether-this-field-is-displayed=Write a condition expression to control whether this field is displayed.
 x-is-a-reserved-word={0} is a reserved word and cannot be used.
 x-key={0} chave
-x-removed={0} (Removed)
+x-removed={0} (quitado)
 x-version-x={0} ({1})
 yes-cancel=Si, cancelar.
 yes-delete=Si, eliminar.
