--- a/modules/apps/fragment/fragment-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/fragment/fragment-web/src/main/resources/content/Language_gl.properties
@@ -2,7 +2,7 @@ a-fragment-collection-with-the-key-x-already-exists=A fragment collection with t
 a-fragment-entry-with-the-key-x-already-exists=A fragment entry with the key <em>{0}</em> already exists.
 a-previous-version=A Previous Version
 action.MANAGE_FRAGMENT_ENTRIES=Manage Fragment Entries
-add-component=Add Component
+add-component=Engadir compoñente
 add-fragment=Engadir fragmento
 add-section=Engadir sección
 all-x=Todos ({0})
