--- a/modules/apps/frontend-js/frontend-js-minifier/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/frontend-js/frontend-js-minifier/src/main/resources/content/Language_gl.properties
@@ -1,6 +1,6 @@
 css-line-break=CSS Line Break
 js-disable-optimizations=JS Disable Optimizations
-js-line-break=JS Line Break
+js-line-break=Quebra de liña JS
 js-munge=JS Munge
 js-preserve-all-semicolons=JS Preserve All Semicolons
 js-verbose=JS verboso
