--- a/modules/apps/my-subscriptions/my-subscriptions-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/my-subscriptions/my-subscriptions-web/src/main/resources/content/Language_gl.properties
@@ -2,4 +2,4 @@ javax.portlet.description.com_liferay_mysubscriptions_web_portlet_MySubscription
 javax.portlet.title.com_liferay_mysubscriptions_web_portlet_MySubscriptionsPortlet=My Subscriptions
 model.resource.com.liferay.portal.kernel.model.PortletPreferences=Asset Publisher
 my-subscription=My Subscription
-view-in-popup=View in Popup
+view-in-popup=Visualizar en xanela emerxente
