--- a/modules/apps/oauth2-provider/oauth2-provider-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/oauth2-provider/oauth2-provider-web/src/main/resources/content/Language_gl.properties
@@ -21,19 +21,19 @@ are-you-sure-you-want-to-delete-the-selected-entries-this-action-revokes-all-aut
 are-you-sure-you-want-to-remove-access-for-the-selected-entries=Are you sure you want to remove access for the selected entries?
 are-you-sure-you-want-to-revoke-the-authorization=Are you sure you want to revoke the authorization?
 are-you-sure-you-want-to-revoke-the-selected-authorizations-they-will-be-revoked-immediately=Are you sure you want to revoke the selected authorizations? They will be revoked immediately.
-assign-scopes=Assign Scopes
-authorization=Authorization
+assign-scopes=Asignar ámbitos
+authorization=Autorización
 authorizations=Authorizations
 authorize=Autorizar
 authorize-oauth2-application=Authorize OAuth 2 Application
-authorize-x=Authorize {0}
+authorize-x=Autorizar {0}
 can-be-assigned-via-a-global-scope=This resource scope CAN be assigned via a global scope.
 changed=Modificado
 choose-one-of-the-following-global-scopes-that-include-this-resource-scope=Choose one of the following global scopes that include this resource scope:
 client-confidential=Confidential OAuth 2 Client
 client-credentials-user=Client Credentials User
 client-id-already-exists=The OAuth 2 client ID already exists.
-client-profile=Client Profile
+client-profile=Perfil de cliente
 client-profile-native-application=Native Application
 client-profile-user-agent-application=User Agent Application
 client-profile-web-application=Web Application
@@ -41,11 +41,11 @@ createDate=Data de creación
 delete-access-token=Delete Access Token
 delete-refresh-token=Delete Refresh Token
 details=detalles
-edit-client-id=Edit Client ID
+edit-client-id=Editar ID de cliente
 edit-client-secret=Edit Client Secret
-for-x-y=For {0}, {1}.
+for-x-y=Para {0}, {1}.
 generate-new-secret=Generate New Secret
-global-scopes=Global scopes
+global-scopes=Ámbitos globais
 grant-type-x-is-unsupported-for-this-client-type=Grant type "{0}" is unsupported for this client type.
 home-page-url=URL do sitio web
 home-page-url-help=Provide the URL to your application's home page.
@@ -68,7 +68,7 @@ no-applications-were-found=No applications were found.
 no-authorizations-were-found=No authorizations were found.
 no-connected-applications-were-found=No connected applications were found.
 oauth2-applications=OAuth 2 Applications
-privacy-policy=Privacy Policy
+privacy-policy=Política de privacidade
 privacy-policy-url=Privacy Policy URL
 privacy-policy-url-help=Provide a link to your application's privacy policy. This information is shown to the users during the authorization process.
 privacy-policy-url-is-invalid=The privacy policy URL is invalid.
@@ -78,12 +78,12 @@ redirect-uri-x-fragment-is-invalid=Callback URI "{0}" cannot contain a fragment.
 redirect-uri-x-is-invalid=Callback URI "{0}" is invalid
 redirect-uri-x-path-is-invalid=Callback URI "{0}" path is invalid
 redirect-uri-x-scheme-is-invalid=Callback URI "{0}" scheme is invalid; only http and https schemes are available.
-redirect-uris=Callback URIs
+redirect-uris=URIs de callback
 redirect-uris-help=Specify where to redirect the user after the authorization.
 refreshTokenCreateDate=Refresh Token Create Date
 refreshTokenExpirationDate=Refresh Token Expiration
 remoteIPInfo=IP remoto
-remove-access=Remove Access
+remove-access=Quitar acceso
 resource-scopes=Resource scopes
 revoke=Revogar
 revoke-authorizations=Revoke Authorizations
