--- a/modules/apps/portal-remote/portal-remote-cxf-common/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-remote/portal-remote-cxf-common/src/main/resources/content/Language_gl.properties
@@ -1,3 +1,3 @@
 auth-verifier-properties=Authentication Verifier Properties
-cxf-endpoint-configuration-name=CXF Endpoints
+cxf-endpoint-configuration-name=Endpoints CXF
 required-extensions=Required Extensions
