--- a/modules/apps/portal-remote/portal-remote-rest-extender/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-remote/portal-remote-rest-extender/src/main/resources/content/Language_gl.properties
@@ -1,5 +1,5 @@
-context-paths=Context Paths
+context-paths=Camiños de contexto
 jax-rs-applications-filters=JAX-RS Applications Filters
 jax-rs-provider-filters=JAX-RS Provider Filters
 jax-rs-service-filters=JAX-RS Service Filters
-rest-extender-configuration-name=REST Extender
+rest-extender-configuration-name=Extensor REST
