--- a/modules/apps/portal-remote/portal-remote-soap-extender-impl/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-remote/portal-remote-soap-extender-impl/src/main/resources/content/Language_gl.properties
@@ -1,7 +1,7 @@
-context-paths=Context Paths
+context-paths=Camiños de contexto
 jax-ws-api-configuration-name=API de JAX-WS
 jax-ws-handler-filters=JAX-WS Handler Filters
 jax-ws-service-filters=JAX-WS Service Filters
 soap-descriptor-builder=SOAP Descriptor Builder
-soap-extender-configuration-name=SOAP Extenders
+soap-extender-configuration-name=Extensores SOAP
 timeout=Tempo de espera
