--- a/modules/apps/portal-security-wedeploy-auth/portal-security-wedeploy-auth-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-security-wedeploy-auth/portal-security-wedeploy-auth-web/src/main/resources/content/Language_gl.properties
@@ -4,7 +4,7 @@ client-id-and-client-secret-do-not-match=Client ID and client secret do not matc
 javax.portlet.title.com_liferay_portal_security_wedeploy_auth_web_internal_portlet_WeDeployAuthAdminPortlet=WeDeploy Auth Admin
 javax.portlet.title.com_liferay_portal_security_wedeploy_auth_web_internal_portlet_WeDeployAuthPortlet=WeDeploy Auth
 no-wedeploy-apps-were-found=No WeDeploy apps were found.
-redirect-uri=Redirect URI
+redirect-uri=URI de redireccionamiento
 request-token-does-not-match=Request token does not match.
-wedeploy-app=WeDeploy App
+wedeploy-app=Aplicación WeDeploy
 x-would-like-to-view-the-following-information={0} would like to view the following information:
