--- a/modules/apps/portal/portal-cluster-multiple/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal/portal-cluster-multiple/src/main/resources/content/Language_gl.properties
@@ -1,5 +1,5 @@
 cluster-executor-configuration-name=Cluster Executor
 cluster-node-address-timeout=Cluster Node Address Timeout
-debug-enabled=Debug Enabled
+debug-enabled=Depuración activada
 excluded-property-keys=Excluded Property Keys
 excluded-property-keys-help=Remove property keys for logging.
