--- a/modules/apps/product-navigation/product-navigation-control-menu-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/product-navigation/product-navigation-control-menu-web/src/main/resources/content/Language_gl.properties
@@ -3,7 +3,7 @@ can-be-added-once=Can Be Added Once
 can-be-added-several-times=Can Be Added Several Times
 find-a-page=Encontrar unha páxina
 install-more-widgets=Install More Widgets
-javax.portlet.title.com_liferay_product_navigation_control_menu_web_portlet_ProductNavigationControlMenuPortlet=Control Menu
+javax.portlet.title.com_liferay_product_navigation_control_menu_web_portlet_ProductNavigationControlMenuPortlet=Menú de control
 page-not-found=Páxina non encontrada
 pages-finder=Localizador de páxinas
 results-more-refine-keywords=result(s) more, refine keywords
