--- a/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/content/Language_gl.properties
@@ -1,2 +1,2 @@
-javax.portlet.title.com_liferay_product_navigation_product_menu_web_portlet_ProductMenuPortlet=Product Menu
+javax.portlet.title.com_liferay_product_navigation_product_menu_web_portlet_ProductMenuPortlet=Menú de produto
 product-admin-menu=Product Admin Menu
