--- a/modules/apps/users-admin/users-admin-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/users-admin/users-admin-web/src/main/resources/content/Language_gl.properties
@@ -32,7 +32,7 @@ javax.portlet.description.com_liferay_users_admin_web_portlet_UsersAdminPortlet=
 javax.portlet.title.com_liferay_my_account_web_portlet_MyAccountPortlet=A miña conta
 javax.portlet.title.com_liferay_users_admin_web_portlet_MyOrganizationsPortlet=Engadir organizacións
 javax.portlet.title.com_liferay_users_admin_web_portlet_UsersAdminPortlet=Buscar usuarios e organizacións
-make-primary=Make Primary
+make-primary=Converter en principal
 manage-custom-fields=Manage Custom Fields
 manage-site=Administrar sitio
 more-information=More Information
