--- a/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_gl.properties
+++ b/modules/dxp/apps/saml/saml-web/src/main/resources/content/Language_gl.properties
@@ -79,7 +79,7 @@ service-provider-connections=Service Provider Connections
 service-provider-defaults=Service Provider Defaults
 service-provider-metadata-help=Provide either a URL to the service provider metadata or upload a metadata XML file. When you provide a URL, the metadata is periodically updated. Make sure the metadata contains the signing certificate of the service provider.
 signature-algorithm=Signature Algorithm
-subject-dn=Subject DN
+subject-dn=Asunto DN
 there-are-no-identity-providers=There are no identity providers.
 there-are-no-service-providers=There are no service providers.
 transient=Transitorio
