--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -1497,7 +1497,7 @@ defining-permissions-for-this-resource-is-not-available-for-this-type-of-role=Ce
 definition=Définition
 definition-id=Identifiant de définition
 definition-name=Nom de la définition
-definition-of-terms=Définition des termes
+definition-of-terms=Définition des limites
 definition-version=Version de Définition
 definitions=Définitions
 delete=Effacer
@@ -1739,7 +1739,7 @@ edit-script=Modifier le script
 edit-settings=Modifier les paramètres
 edit-settings-for-x-in-group=Modifier les préférences de {0} dans le groupe :
 edit-site-settings=Modifier les propriétés du site
-edit-stock-quantity=Modifier la quantité en stock
+edit-stock-quantity=Modifier la quantité courante
 edit-tag=Modifier l'étiquette
 edit-tag-permissions=Modifier les permissions pour les étiquettes
 edit-tag-set-permissions=Modifier la permission pour les réglages d'étiquette
@@ -2989,7 +2989,7 @@ multi-valued-help=Permettre à l'utilisateur de choisir plusieurs catégories de
 multiple=Plusieurs
 multiple-file-uploading-is-not-available=Le chargement simultané de plusieurs fichiers n'est pas disponible.
 multiple-images=Plusieurs images
-must-cart-quantities-be-a-multiple-of-the-item's-minimum-quantity=Les quantités du panier doivent-elles être un multiple de la quantité minimum de l'article ?
+must-cart-quantities-be-a-multiple-of-the-item's-minimum-quantity=Les quantités du chariot doivent-elles être un multiple de la quantité minimum de l'article ?
 my-account=Mon Compte
 my-addresses=Mes Adresses
 my-blog=Mon Blogue
@@ -3597,7 +3597,7 @@ please-map-each-of-the-user-properties-screen-name,-email-address,-first-name,-a
 please-map-each-of-the-user-properties-screen-name,-password,-email-address,-first-name,-and-last-name-to-an-ldap-attribute=Veuillez mettre en correspondance toutes les propriétés utilisateur <em>Nom d'affichage Name</em>, <em>E-mail</em>, <em>Prénom</em> et <em>Nom</em> à un attribut LDAP.
 please-press-the-save-button-to-view-your-changes=Veuillez appuyer sur le bouton 'Sauver' pour voir vos modifications.
 please-provide-all-mandatory-files-and-make-sure-the-file-types-are-valid=Veuillez fournir tous les fichiers obligatoires et assurez-vous que les types de dossier sont valides.
-please-reenter-your-quantity-for-the-items-with-the-following-skus=Veuillez ressaisir votre quantité pour les articles dotés des UGS suivantes :
+please-reenter-your-quantity-for-the-items-with-the-following-skus=Veuillez réintroduire votre quantité pour les articles avec les SKU suivants :
 please-select-a-category=Veuillez choisir une catégorie.
 please-select-a-country=Veuillez choisir un pays.
 please-select-a-course=Veuillez choisir un cours.
@@ -4003,7 +4003,7 @@ requests-pending=En attente des requêtes
 require-captcha=Exiger CAPTCHA
 require-captcha-to-submit-the-form=CAPTCHA requis
 require-last-name=Exiger le nom de famille
-require-password-reset=Exiger la réinitialisation de mot de passe
+require-password-reset=Exiger la réinitialisation du mot de passe
 require-unlock=Nécessite un dévérouillage
 require-unlock-help=Sélectionner cette option pour que l'opération de dévérouillage nécessite qu'un administrateur le fasse manuellement.
 require-user-authentication=Demander une authentification aux utilisateurs.
@@ -4012,7 +4012,7 @@ required=Requis
 required-roles=Rôles requis
 requires-shipping=Nécessite l'expédition
 resend=Renvoyer
-resend-confirmation-email=Renvoyer l'email de confirmation
+resend-confirmation-email=Renvoyer L'Email De Confirmation
 resend-shipping-email=Renvoyer l'email d'expédition
 reserved-credentials=Qualifications réservées
 reserved-screen-names=Logins réservés
