ISSUP-2873 build lang

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ca.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Icona Edita la nota
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Botó Desplega el tauler
@@ -52,6 +53,7 @@ grace-period=Període de gràcia
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Mida de la instància
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=Administració d'assistència LCS
 liferay-workers=Treballadors de Liferay
 name-code=Nom | Codi
@@ -75,6 +77,7 @@ note-deleted-successfully=La nota s'ha suprimit correctament.
 note-updated-successfully=La nota s'ha actualitzat correctament.
 notes=Nota
 oem-instructions=Instruccions d'OEM
+okta-id=Okta ID (Automatic Copy)
 original-value=Valor original
 other=Altres
 parent-account=Compte pare
