--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fr.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Icône Éditer la note
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Bouton Développer le panneau
@@ -52,6 +53,7 @@ grace-period=Période de grâce
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Taille de l'instance
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=Administration d'assistance LCS
 liferay-workers=Ouvriers Liferay
 name-code=Nom | Code
@@ -75,6 +77,7 @@ note-deleted-successfully=La note a bien été supprimée.
 note-updated-successfully=La note a bien été mise à jour.
 notes=Notes
 oem-instructions=Instructions OEM
+okta-id=Okta ID (Automatic Copy)
 original-value=Valeur d'origine
 other=Autre
 parent-account=Compte parent
