--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl_BE.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Edit Note Icon (Automatic Copy)
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA (Automatic Copy)
 expand-panel-button=Expand Panel Button (Automatic Copy)
@@ -52,6 +53,7 @@ grace-period=Grace Period (Automatic Copy)
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Instance Size (Automatic Copy)
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS Support Admin (Automatic Copy)
 liferay-workers=Liferay Workers (Automatic Copy)
 name-code=Name | Code (Automatic Copy)
@@ -75,6 +77,7 @@ note-deleted-successfully=Note deleted successfully. (Automatic Copy)
 note-updated-successfully=Note updated successfully. (Automatic Copy)
 notes=Notities
 oem-instructions=OEM Instructions (Automatic Copy)
+okta-id=Okta ID (Automatic Copy)
 original-value=Original Value (Automatic Copy)
 other=Other (Automatic Copy)
 parent-account=Parent Account (Automatic Copy)
