--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_pt_BR.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Editar ícone de nota
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Expandir botão de painel
@@ -52,6 +53,7 @@ grace-period=Período de carência
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Tamanho de instância
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=Administração de suporte LCS
 liferay-workers=Funcionários Liferay
 name-code=Nome | Código
@@ -75,6 +77,7 @@ note-deleted-successfully=Nota excluída com sucesso.
 note-updated-successfully=Nota atualizada com sucesso.
 notes=Anotações
 oem-instructions=Instruções OEM
+okta-id=Okta ID (Automatic Copy)
 original-value=Valor original
 other=Outro
 parent-account=Conta Pai
