--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_sv.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_sv.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Redigera ikon för anteckning
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Expandera panelknapp
@@ -52,6 +53,7 @@ grace-period=Respitperiod
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Instansens storlek
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS-supportadministratör
 liferay-workers=Liferay-arbetare
 name-code=Namn | Kod
@@ -75,6 +77,7 @@ note-deleted-successfully=Anteckning har tagits bort.
 note-updated-successfully=Anteckning har uppdaterats.
 notes=Anteckningar
 oem-instructions=OEM-anvisningar
+okta-id=Okta ID (Automatic Copy)
 original-value=Ursprungligt värde
 other=Annat
 parent-account=Överordnat konto
