--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ar.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ar.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=تحرير رمز الملاحظة
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=زر توسيع اللوحة
@@ -52,6 +53,7 @@ grace-period=فترة السماح
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=حجم المثيل
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=مسؤول دعم LCS
 liferay-workers=عمال Liferay
 name-code=الاسم | الرمز
@@ -75,6 +77,7 @@ note-deleted-successfully=تم حذف الملاحظة بنجاح.
 note-updated-successfully=تم تحديث الملاحظة بنجاح.
 notes=الملاحظات
 oem-instructions=تعليمات OEM
+okta-id=Okta ID (Automatic Copy)
 original-value=القيمة الأصلية
 other=أخرى
 parent-account=الحساب الرئيسي
