--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_de.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Anmerkungssymbol bearbeiten
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Panel-Schaltfläche erweitern
@@ -52,6 +53,7 @@ grace-period=Frist
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Instanzgröße
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS-Support-Admin
 liferay-workers=Liferay-Worker
 name-code=Name | Code
@@ -75,6 +77,7 @@ note-deleted-successfully=Notiz wurde erfolgreich gelöscht.
 note-updated-successfully=Notiz erfolgreich aktualisiert.
 notes=Notizen
 oem-instructions=OEM-Anweisungen
+okta-id=Okta ID (Automatic Copy)
 original-value=Ursprünglicher Wert
 other=Sonstiges
 parent-account=Übergeordnetes Konto
