--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_es.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Icono de editar nota
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Botón Expandir panel
@@ -52,6 +53,7 @@ grace-period=Período de gracia
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Tamaño de la instancia
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=Administrador de asistencia de LCS
 liferay-workers=Trabajadores de Liferay
 name-code=Nombre | Código
@@ -75,6 +77,7 @@ note-deleted-successfully=La nota se eliminó correctamente.
 note-updated-successfully=La nota se actualizó correctamente.
 notes=Notas
 oem-instructions=Instrucciones de OEM
+okta-id=Okta ID (Automatic Copy)
 original-value=Valor original
 other=Otro
 parent-account=Cuenta primaria
