--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fi.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Muokkaa Muistiinpanokuvaketta
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Laajenna Paneeli -Painike
@@ -52,6 +53,7 @@ grace-period=Lisäaika
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Ilmentymän Koko
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS Tuen Ylläpito
 liferay-workers=Liferay-työntekijät
 name-code=Nimi | Koodi
@@ -75,6 +77,7 @@ note-deleted-successfully=Huomautus poistettiin onnistuneesti.
 note-updated-successfully=Huomautus päivitettiin onnistuneesti.
 notes=Muistiinpanoja
 oem-instructions=OEM-ohjeet
+okta-id=Okta ID (Automatic Copy)
 original-value=Alkuperäinen Arvo
 other=Muu
 parent-account=Ylätason Tili
