--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_hu.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Megjegyzés szerkesztése ikon
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Panel kibontásának a gombja
@@ -52,6 +53,7 @@ grace-period=Türelmi időszak
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Példány mérete
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS támogatás adminisztrátora
 liferay-workers=Liferay dolgozók
 name-code=Név | Kód
@@ -75,6 +77,7 @@ note-deleted-successfully=Megjegyzés sikeresen törölve.
 note-updated-successfully=Megjegyzés sikeresen frissítve.
 notes=Jegyzetek
 oem-instructions=OEM utasítások
+okta-id=Okta ID (Automatic Copy)
 original-value=Eredeti érték
 other=Egyéb
 parent-account=Fölérendelt fiókopy)
