--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ja.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=メモアイコンを編集
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=パネルボタンを展開
@@ -52,6 +53,7 @@ grace-period=猶予期間
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=インスタンスサイズ
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCSサポートの管理
 liferay-workers=Liferay従業員
 name-code=名前 | コード
@@ -75,6 +77,7 @@ note-deleted-successfully=メモを正常に削除しました。
 note-updated-successfully=メモを正常に更新しました。
 notes=メモ
 oem-instructions=OEMの説明
+okta-id=Okta ID (Automatic Copy)
 original-value=元の値
 other=その他
 parent-account=親アカウント
