--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=Pictogram Notitie bewerken
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=Knop paneel uitvouwen
@@ -52,6 +53,7 @@ grace-period=Respijtperiode
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=Grootte instantie
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=Beheerder LCS-ondersteuning
 liferay-workers=Liferay-medewerkers
 name-code=Naam | Code
@@ -75,6 +77,7 @@ note-deleted-successfully=Notitie verwijderd.
 note-updated-successfully=Notitie bijgewerkt.
 notes=Notities
 oem-instructions=OEM-instructies
+okta-id=Okta ID (Automatic Copy)
 original-value=Oorspronkelijke waarde
 other=Overige
 parent-account=Bovenliggend account
