--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_zh_CN.properties
@@ -37,6 +37,7 @@ edit-field-icon=Edit Field Icon (Automatic Copy)
 edit-note-icon=编辑注释图标
 edit-subscription=Edit Subscription (Automatic Copy)
 edit-team=Edit Team (Automatic Copy)
+email-address-verified=Email Address Verified (Automatic Copy)
 entitlements=Entitlements (Automatic Copy)
 ewsa=EWSA
 expand-panel-button=展开面板按钮
@@ -52,6 +53,7 @@ grace-period=宽限期
 grace-period-end-date=Grace Period End Date (Automatic Copy)
 instance-size=实例大小
 instructions=Instructions (Automatic Copy)
+language-id=Language ID (Automatic Copy)
 lcs-support-admin=LCS 支持管理
 liferay-workers=Liferay 员工
 name-code=姓名 | 工号
@@ -75,6 +77,7 @@ note-deleted-successfully=已成功删除注释。
 note-updated-successfully=已成功更新注释。
 notes=注释
 oem-instructions=OEM 说明
+okta-id=Okta ID (Automatic Copy)
 original-value=原始值
 other=其他
 parent-account=父帐户
