ISSUP-2875 build lang

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ca.properties
@@ -65,6 +65,7 @@ new-value=Valor nou
 next-term-starts=El nou termini comença
 no-accounts-were-found=No s'ha trobat cap compte.
 no-contacts-were-found=No s'ha trobat cap contacte.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=No s'ha trobat cap enllaç extern.
 no-notes-were-found=No s'ha trobat cap nota.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
