--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_de.properties
@@ -65,6 +65,7 @@ new-value=Neuer Wert
 next-term-starts=Nächster Zeitraum beginnt
 no-accounts-were-found=Es wurden keine Konten gefunden.
 no-contacts-were-found=Es wurden keine Kontakte gefunden.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Es wurden keine externen Links gefunden.
 no-notes-were-found=Es wurden keine Notizen gefunden.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
