--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_es.properties
@@ -65,6 +65,7 @@ new-value=Nuevo valor
 next-term-starts=El próximo plazo empieza
 no-accounts-were-found=No se encontraron cuentas.
 no-contacts-were-found=No se encontraron contactos.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=No se encontraron enlaces externos.
 no-notes-were-found=No se encontraron notas.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
