--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fr.properties
@@ -65,6 +65,7 @@ new-value=Nouvelle valeur
 next-term-starts=Prochains débuts de terme
 no-accounts-were-found=Aucun compte n'a été trouvé.
 no-contacts-were-found=Aucun contact trouvé.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Liens externes introuvables.
 no-notes-were-found=Aucune note trouvée.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
