--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_hu.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_hu.properties
@@ -65,6 +65,7 @@ new-value=Új érték
 next-term-starts=Új időszak kezdete
 no-accounts-were-found=Nem található fiók.
 no-contacts-were-found=Nem találhatók partnerek.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Nem található külső hivatkozás.
 no-notes-were-found=Nem találhatók megjegyzések.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
