--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ja.properties
@@ -65,6 +65,7 @@ new-value=新規値
 next-term-starts=次の期間開始
 no-accounts-were-found=アカウントが見つかりません。
 no-contacts-were-found=連絡先が見つかりません。
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=外部リンクが見つかりません。
 no-notes-were-found=メモが見つかりません。
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
