--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_nl.properties
@@ -65,6 +65,7 @@ new-value=Nieuwe waarde
 next-term-starts=Volgende periode start
 no-accounts-were-found=Er werden geen accounts gevonden.
 no-contacts-were-found=Geen contacten gevonden.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Geen externe links gevonden.
 no-notes-were-found=Geen notities gevonden.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
