--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_pt_BR.properties
@@ -65,6 +65,7 @@ new-value=Novo valor
 next-term-starts=Início do próximo termo
 no-accounts-were-found=Nenhuma conta foi encontrada.
 no-contacts-were-found=Nenhum contato foi encontrado.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Nenhum link externo foi encontrado.
 no-notes-were-found=Nenhuma nota encontrada.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
