--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_sv.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_sv.properties
@@ -65,6 +65,7 @@ new-value=Nytt värde
 next-term-starts=Nästa period startar
 no-accounts-were-found=Inga konton hittades.
 no-contacts-were-found=Inga kontakter hittades.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Inga externa länkar hittades.
 no-notes-were-found=Inga anteckningar hittades.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
