--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_zh_CN.properties
@@ -65,6 +65,7 @@ new-value=新值
 next-term-starts=下一个期间的开始时间
 no-accounts-were-found=未找到帐户。
 no-contacts-were-found=未找到联系人。
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=未找到外部链接。
 no-notes-were-found=未找到注释。
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
