--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ar.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_ar.properties
@@ -65,6 +65,7 @@ new-value=قيمة جديدة
 next-term-starts=بداية الفترة التالية
 no-accounts-were-found=لم يتم العثور على أي حسابات.
 no-contacts-were-found=لم يتم العثور على جهات اتصال.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=لم يتم العثور على ارتباطات خارجية.
 no-notes-were-found=لم يتم العثور على أي ملاحظات.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
