--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_fi.properties
@@ -65,6 +65,7 @@ new-value=Uusi Arvo
 next-term-starts=Seuraava Kausi Alkaa
 no-accounts-were-found=Yhtään tiliä ei löytynyt.
 no-contacts-were-found=Yhteystietoja ei löytynyt.
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=Ulkoisia linkkejä ei löytynyt.
 no-notes-were-found=Muistiinpanoja ei löytynyt.
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
