--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_tr.properties
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-web/src/main/resources/content/Language_tr.properties
@@ -65,6 +65,7 @@ new-value=New Value (Automatic Copy)
 next-term-starts=Next Term Starts (Automatic Copy)
 no-accounts-were-found=No accounts were found. (Automatic Copy)
 no-contacts-were-found=No contacts were found. (Automatic Copy)
+no-entitlements-were-found=No entitlements were found. (Automatic Copy)
 no-external-links-were-found=No external links were found. (Automatic Copy)
 no-notes-were-found=No notes were found. (Automatic Copy)
 no-product-bundles-were-found=No product bundles were found. (Automatic Copy)
