LPS-77699 Update Translations

--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_fi.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=Aktiiviset Ominaisuudet
+add-more-features=Lisää Enemmän Ominaisuuksia
+all-rights-reserved=Kaikki Oikeudet Pidätetään
+cancel-your-subscription=Peruuta Tilauksesi
+creating-an-unique-link=Luodaan Yksikäsitteinen Linkki
+disclaimer=Ymmärrän ja hyväksyn seuraavan sopimuksen ehdot: Arviointilisenssisopimus, Loppukäyttäjän käyttöehdot (EULA) Liferay Developer Studiolle, Tietosuojakäytännöt.
+explore-liferay-commerce=Tutki Liferay Commercea yksityisellä demosivustolla. Tallennamme kirjautumistunnuksesi ja sisällön 30 päivän ajan.
+go-to-x=Siirry kohteeseen {0}.
+hello=Hei
+loading-instance=Laitetaanpa Liferay Commerce -ilmentymä pystyyn ja käyntiin.
+osb-commerce-provisioning=OSB Kaupankäynnin Varustaminen
+password=Salasana
+return-to-full-page=Palaa sivulle
+setting-up-a-new-instance=Uuden Ilmentymän Määrittäminen
+setting-up-administrator=Määritetään Ylläpitäjä
+start-trial=Aloita Kokeilu
+start-your-demo=Aloita Demosi
+start-your-private-demo=Aloita yksityinen demosi.
+stay-up-to-date=Pysy ajan tasalla!
+switch-to=Vaihda Kohteeseen
+trial-period-expires-in-days=Kokeilujakso päättyy 14 päivän kuluttua.
+try-liferay-commerce=Kokeile Liferay Commercea 30 päivän ajan.
+wait-time=Tämä kestää enintään 2 minuuttia.
+welcome-message=Tarkista sähköpostisi, olet saanut ohjeet miten kirjautua demoosi. Jos sinulla on kysyttävää, kerro meille osoitteeseen hello@liferay.com.
+welcome-to-your-demo=Tervetuloa Demoosi
+work-email=Työsähköposti
+your-email=Sähköpostisi
+your-plan=Sopimuksesi
+your-work-email=Työsähköpostisi
