--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_nb.properties
@@ -9,8 +9,8 @@ go-to-x=Go to {0}. (Automatic Copy)
 hello=Hello (Automatic Copy)
 loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
 osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
+password=Passord
+return-to-full-page=Tilbake til normal side
 setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
 setting-up-administrator=Setting Up Administrator (Automatic Copy)
 start-trial=Start Trial (Automatic Copy)
