--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_sr_RS.properties
@@ -10,7 +10,7 @@ hello=Hello (Automatic Copy)
 loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
 osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
 password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
+return-to-full-page=Врати се на Целу Страницу
 setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
 setting-up-administrator=Setting Up Administrator (Automatic Copy)
 start-trial=Start Trial (Automatic Copy)
