--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_ca.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=Característiques actives
+add-more-features=Afegeix més característiques
+all-rights-reserved=Tots els drets reservats
+cancel-your-subscription=Cancel·la la subscripció
+creating-an-unique-link=S'està creant un enllaç únic
+disclaimer=Entenc i accepto els termes i les condicions dels següents acords: Acord de llicència d'avaluació, EULA per\n a Liferay Developer Studio, Política de privadesa.
+explore-liferay-commerce=Exploreu Liferay Commerce en un lloc web de demostració privat. Desarem les vostres credencials i el vostre contingut durant 30 dies.
+go-to-x=Ves a {0}.
+hello=Hola
+loading-instance=Posem en funcionament la instància de Liferay Commerce.
+osb-commerce-provisioning=Administració de comerç OSB
+password=Contrasenya
+return-to-full-page=Torna a la pàgina principal
+setting-up-a-new-instance=S'està configurant una instància nova
+setting-up-administrator=S'està configurant l'administrador
+start-trial=Inicieu la prova
+start-your-demo=Inicieu la demostració privada
+start-your-private-demo=Inicieu la demostració privada.
+stay-up-to-date=Estigueu al dia!
+switch-to=Canvia a
+trial-period-expires-in-days=El període de prova finalitzarà d'aquí 14 dies.
+try-liferay-commerce=Proveu Liferay Commerce durant 30 dies.
+wait-time=Això pot trigar 2 minuts.
+welcome-message=Reviseu el correu electrònic per veure les instruccions sobre com iniciar la sessió a la demostració. Si teniu algun dubte, escriviu-nos a hello@liferay.com.
+welcome-to-your-demo=Benvingut a la demostració
+work-email=Adreça electrònica professional
+your-email=La vostra adreça electrònica
+your-plan=El vostre pla
+your-work-email=La vostra adreça electrònica professional
