--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_de.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=Aktive Funktionen
+add-more-features=Weitere Funktionen hinzufügen
+all-rights-reserved=Alle Rechte vorbehalten
+cancel-your-subscription=Ihr Abonnement kündigen
+creating-an-unique-link=Erstellen eines eindeutigen Links
+disclaimer=Ich verstehe und akzeptiere die Nutzungsbedingungen der folgenden Vereinbarungen: Testlizenzvereinbarung, EULA für Liferay Developer Studio, Datenschutzrichtlinie.
+explore-liferay-commerce=Erkunden Sie Liferay Commerce auf einer privaten Demo-Website. Ihre Anmeldeinformationen und Inhalte werden von uns 30 Tage lang gespeichert.
+go-to-x=Gehe zu {0}.
+hello=Hallo
+loading-instance=Lassen Sie uns die Liferay-Commerce-Instanz zum Laufen bringen.
+osb-commerce-provisioning=OSB Handelsbereitstellung
+password=Kennwort
+return-to-full-page=Zurück zur Seite
+setting-up-a-new-instance=Einrichtung einer neuen Instanz
+setting-up-administrator=Einrichtung des Administrators
+start-trial=Testversion starten
+start-your-demo=Starten Sie Ihre Demoversion
+start-your-private-demo=Ihre private Demoversion starten.
+stay-up-to-date=Bleiben Sie auf dem Laufenden!
+switch-to=Wechseln zu
+trial-period-expires-in-days=Der Testzeitraum läuft in 14 Tagen ab.
+try-liferay-commerce=Liferay Commerce 30 Tage lang testen.
+wait-time=Dies kann bis zu 2 Minuten in Anspruch nehmen.
+welcome-message=Bitte prüfen Sie Ihre E-Mail auf Anweisungen hinsichtlich der Anmeldung bei Ihrer Demoversion. Falls Sie Fragen haben, schreiben Sie bitte eine E-Mail an hello@liferay.com.
+welcome-to-your-demo=Willkommen zu Ihrer Demoversion
+work-email=E-Mail (geschäftlich)
+your-email=Ihre E-Mail
+your-plan=Ihr Plan
+your-work-email=Ihre E-Mail (geschäftlich)
