--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_fr.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=Fonctionnalités actives
+add-more-features=Ajouter plus de fonctionnalités
+all-rights-reserved=Tous droits réservés
+cancel-your-subscription=Annulez votre abonnement
+creating-an-unique-link=Créer un lien unique
+disclaimer=Je comprends et j'accepte les conditions générales des accords suivants : Contrat de licence d'évaluation, CLUF du Liferay Developer Studio, Politique de confidentialité.
+explore-liferay-commerce=Explorez Liferay Commerce sur un site de démonstration privé. Nous enregistrerons vos informations de connexion et votre contenu pendant 30 jours.
+go-to-x=Aller à {0}.
+hello=Bonjour
+loading-instance=Démarrons cette instance de Liferay Commerce.
+osb-commerce-provisioning=Approvisionnement du Commerce OSB
+password=Mot de passe
+return-to-full-page=Revenir à la page complète
+setting-up-a-new-instance=Configuration d'une nouvelle instance
+setting-up-administrator=Configuration de l'administrateur
+start-trial=Démarrez l'essai
+start-your-demo=Démarrez votre démo
+start-your-private-demo=Démarrez votre démo privée.
+stay-up-to-date=Restez à jour !
+switch-to=Basculer vers
+trial-period-expires-in-days=La période d'essai se termine dans 14 jours.
+try-liferay-commerce=Essayez Liferay Commerce pendant 30 jours.
+wait-time=Cela peut prendre jusqu'à 2 minutes.
+welcome-message=Veuillez consulter votre boîte de réception pour y trouver les instructions pour vous connecter à votre démo. Si vous avez des questions, écrivez-nous à hello@liferay.com.
+welcome-to-your-demo=Bienvenue dans votre démo
+work-email=Adresse e-mail professionnelle
+your-email=Adresse e-mail
+your-plan=Votre offre
+your-work-email=Votre adresse e-mail professionnelle
