--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_ja.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=有効な機能
+add-more-features=その他の機能を追加
+all-rights-reserved=All Rights Reserved
+cancel-your-subscription=サブスクリプションをキャンセル
+creating-an-unique-link=重複しないリンクを作成しています
+disclaimer=評価ライセンス契約、Liferay Developer Studio使用許諾契約、プライバシーポリシーの諸条件を理解し、同意します。
+explore-liferay-commerce=非公開デモサイトでLiferay Commerceをお試しください。あなたの認証情報とコンテントは30日間保存されます。
+go-to-x={0}へ移動します。
+hello=こんにちは
+loading-instance=Liferay Commerceのインスタンスを起動しましょう。
+osb-commerce-provisioning=OSBコマースのプロビジョニング
+password=パスワード
+return-to-full-page=フルページに戻る
+setting-up-a-new-instance=新しいインスタンスを設定しています
+setting-up-administrator=管理者を設定しています
+start-trial=トライアルを開始
+start-your-demo=デモを開始
+start-your-private-demo=非公開デモを開始します。
+stay-up-to-date=最新情報を入手してください！
+switch-to=切り替え
+trial-period-expires-in-days=トライアル期間は14日後に期限が切れます。
+try-liferay-commerce=Liferay Commerceを30日間試用してください。
+wait-time=この処理には最大で2分かかります。
+welcome-message=デモにログインする方法については、メールで手順を確認してください。ご質問がありましたら、hello@liferay.com までご連絡ください。
+welcome-to-your-demo=デモへようこそ
+work-email=勤務先メールアドレス
+your-email=あなたのメールアドレス
+your-plan=あなたのプラン
+your-work-email=あなたの勤務先メールアドレス
