--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1,29 +1,29 @@
-active-features=Active Features (Automatic Copy)
-add-more-features=Add More Features (Automatic Copy)
-all-rights-reserved=All Rights Reserved (Automatic Copy)
-cancel-your-subscription=Cancel Your Subscription (Automatic Copy)
-creating-an-unique-link=Creating an Unique Link (Automatic Copy)
-disclaimer=I understand and accept the terms and conditions of the following agreements: Evaluation License Agreement, EULA for Liferay Developer Studio, Privacy Policy. (Automatic Copy)
-explore-liferay-commerce=Explore Liferay Commerce on a private demo site. We'll save your credentials and content for 30 days. (Automatic Copy)
-go-to-x=Go to {0}. (Automatic Copy)
-hello=Hello (Automatic Copy)
-loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
-osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
-return-to-full-page=Return to Full Page (Automatic Copy)
-setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
-setting-up-administrator=Setting Up Administrator (Automatic Copy)
-start-trial=Start Trial (Automatic Copy)
-start-your-demo=Start Your Demo (Automatic Copy)
-start-your-private-demo=Start your private demo. (Automatic Copy)
-stay-up-to-date=Stay up to date! (Automatic Copy)
-switch-to=Switch To (Automatic Copy)
-trial-period-expires-in-days=The trial period will expire in 14 days. (Automatic Copy)
-try-liferay-commerce=Try Liferay Commerce for 30 days. (Automatic Copy)
-wait-time=This may take up to 2 minutes. (Automatic Copy)
-welcome-message=Please check your email for instructions on how to log in to your demo. If you have any questions, let us know at hello@liferay.com. (Automatic Copy)
-welcome-to-your-demo=Welcome to Your Demo (Automatic Copy)
-work-email=Work Email (Automatic Copy)
-your-email=Your Email (Automatic Copy)
-your-plan=Your Plan (Automatic Copy)
-your-work-email=Your Work Email (Automatic Copy)
+active-features=Ativar recursos
+add-more-features=Adicionar mais recursos
+all-rights-reserved=Todos os direitos reservados
+cancel-your-subscription=Cancelar sua assinatura
+creating-an-unique-link=Criando um link único
+disclaimer=Compreendo e aceito os termos de uso dos seguintes contratos: Contrato de Licença de Avaliação, EULA para Liferay Developer Studio, Política de Privacidade.
+explore-liferay-commerce=Explore o Liferay Commerce em um site de demonstração privado. Armazenaremos suas informações e conteúdo de registro por 30 dias.
+go-to-x=Ir para {0}.
+hello=Olá
+loading-instance=Vamos colocar a instância do Liferay Commerce em funcionamento.
+osb-commerce-provisioning=Provisionamento comercial OSB
+password=Senha
+return-to-full-page=Retornar para página inteira
+setting-up-a-new-instance=Configurando uma nova instância
+setting-up-administrator=Preparando administrador
+start-trial=Iniciar teste
+start-your-demo=Inicie sua demo
+start-your-private-demo=Inicie sua demo privada.
+stay-up-to-date=Permaneça atualizado!
+switch-to=Trocar para
+trial-period-expires-in-days=O período de teste acaba em 14 dias.
+try-liferay-commerce=Experimente o Liferay Commerce por 30 dias.
+wait-time=Isto pode levar até 2 minutos.
+welcome-message=Por favor, procure em seu e-mail as instruções de como realizar o login em sua versão demo. Se você tiver alguma dúvida, entre em contato conosco através de hello@liferay.com.
+welcome-to-your-demo=Boas-vindas a sua Demo
+work-email=E-mail de trabalho
+your-email=Seu e-mail
+your-plan=Seu plano
+your-work-email=Seu e-mail de trabalho
