--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_th.properties
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-lang/src/main/resources/content/Language_th.properties
@@ -9,7 +9,7 @@ go-to-x=Go to {0}. (Automatic Copy)
 hello=Hello (Automatic Copy)
 loading-instance=Let's get Liferay Commerce instance up and running. (Automatic Copy)
 osb-commerce-provisioning=OSB Commerce Provisioning (Automatic Copy)
-password=Password (Automatic Copy)
+password=รหัสผ่าน
 return-to-full-page=Return to Full Page (Automatic Copy)
 setting-up-a-new-instance=Setting Up a New Instance (Automatic Copy)
 setting-up-administrator=Setting Up Administrator (Automatic Copy)
